[package]
name = "slices"
version = "0.1.0"
edition = "2021"
authors = ["Diogo Dias <das.dias6@gmail.com>"]
description = "A simple program to retreive a list of words separated by spaces."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
