[package]
name = "temperature_convert"
version = "0.1.0"
edition = "2021"
authors = ["Diogo Dias <das.dias6@gmail.com>"]
description = "A simple temperature converter between celsius and kelvin / farenheit"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
